--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!--Conteúdo-->
 </body>
 </html>
+
+<h2>RECUPERAÇÃO</h2>
 <h1>porque fiquei de recuperação?</h1>
 <h2>por irreponsabilidade</h2>
+<img src="https://s.dicio.com.br/recuperacao.png" alt="Texto alternativo"/>
 <h2>oque fazer para que nao ocorra novamente?</h2>
 <h3>prestar mais atençao</h3>
-<img scr="img2.webp" alt="img2.webp" title="recuperação"/>
+<img src="" alt="">
