--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!--Conteúdo-->
@@ -16,4 +17,4 @@
 <img src="https://s.dicio.com.br/recuperacao.png" alt="Texto alternativo"/>
 <h2>oque fazer para que nao ocorra novamente?</h2>
 <h3>prestar mais atençao</h3>
-<img src="" alt="">
+<img src="https://api.dialbrasil.com.br/files/Programs/image/20191121170632SE-LIGA.png" id="seliga" alt="">
