--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h2>RECUPERAÇÃO</h2>
 <h1>porque fiquei de recuperação?</h1>
 <h2>por irreponsabilidade</h2>
-<img src="https://s.dicio.com.br/recuperacao.png" alt="Texto alternativo"/>
+<img src="https://s.dicio.com.br/recuperacao.png" id="recuperacao" alt="Texto alternativo"/>
 <h2>oque fazer para que nao ocorra novamente?</h2>
 <h3>prestar mais atençao</h3>
 <img src="https://api.dialbrasil.com.br/files/Programs/image/20191121170632SE-LIGA.png" id="seliga" alt="">
